--- a/config/ss/nginx.conf
+++ b/config/ss/nginx.conf
@@ -10,12 +10,12 @@ http {
 
         # Upload form should be submitted to this location
         location /upload {
-            if ($request_method = 'POST') {
+            #if ($request_method = 'POST') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
                 add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-            }
+            #}
  
             # Pass altered request body to this location
             upload_pass   @test;
