--- a/config/ss/nginx.conf
+++ b/config/ss/nginx.conf
@@ -7,6 +7,11 @@ http {
     server {
         client_max_body_size 100m;
         listen       80;
+        
+        location /upload/gettokens {
+            proxy_pass   http://localhost:8000;
+        }
+
 
         # Upload form should be submitted to this location
         location /upload {
