--- a/config/ss/nginx.conf
+++ b/config/ss/nginx.conf
@@ -11,6 +11,12 @@ http {
         location /upload/gettokens {
             proxy_pass   http://localhost:8000;
         }
+        location /admin {
+            proxy_pass   http://localhost:8000;
+        }
+        location /upload/deleteOauthApp {
+            proxy_pass   http://localhost:8000;
+        }
 
 
         # Upload form should be submitted to this location
@@ -42,8 +48,9 @@ http {
             upload_aggregate_form_field "$upload_field_name.size" "$upload_file_size";
 
             upload_pass_form_field "^submit$|^description$";
+            upload_pass_form_field "uuid";
 
-            upload_cleanup 400 404 499 500-505;
+            upload_cleanup 400 403 404 499 500-505;
         }
 
         # Pass altered request body to a backend
