validation with magic

--- a/config/ss/nginx.conf
+++ b/config/ss/nginx.conf
@@ -11,7 +11,7 @@ http {
         location /upload/gettokens {
             proxy_pass   http://localhost:8000;
         }
-        location /admin {
+        location / {
             proxy_pass   http://localhost:8000;
         }
         location /upload/deleteOauthApp {
