--- a/config/ss/nginx.conf
+++ b/config/ss/nginx.conf
@@ -71,6 +71,7 @@ http {
                 add_header Access-Control-Allow-Methods "GET, OPTIONS";
                 add_header Access-Control-Allow-Headers "origin, authorization, accept, X-Progress-ID";
                 add_header Access-Control-Allow-Credentials "true";
+ 				add_header 'Access-Control-Max-Age' 1728000;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
